# shell_server

./: Cargo.toml  README.md
src/: main.rs  types.rs  util.rs
src/endpoints/: ep_utils.rs  hello_world.rs  keys_register.rs  mod.rs  sudo.rs  systemctl_rt.rs  users.rs
src/middleware/: auth_middleware.rs  auth_middleware.rs.fuck  mod.rs  print_middleware.rs  sample_mw.rs  template_middleware.rs
