[package]
name = "shell_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-service = "2"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
futures = "0.3.28"
futures-util = "0.3.28"
