[package]
edition = "2021"
name = "shell_server"
version = "0.1.0"

[dependencies]
actix-rt = "2"
actix-service = "2"
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4"
once_cell = "1.18.0"
rand = "0.8"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
systemctl = "0.3.1"
tokio = {version = "1", features = ["full"]}
